--- a/assets/base.css
+++ b/assets/base.css
@@ -75,6 +75,35 @@
 }
 
 /* base */
+.abhaya-libre-regular {
+  font-family: "Abhaya Libre", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.abhaya-libre-medium {
+  font-family: "Abhaya Libre", serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.abhaya-libre-semibold {
+  font-family: "Abhaya Libre", serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.abhaya-libre-bold {
+  font-family: "Abhaya Libre", serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.abhaya-libre-extrabold {
+  font-family: "Abhaya Libre", serif;
+  font-weight: 800;
+  font-style: normal;
+}
 
 .page-width {
   max-width: var(--page-width);
@@ -126,8 +155,8 @@ body:has(.section-header .drawer-menu) .announcement-bar-section .page-width {
 
 @media screen and (min-width: 990px) {
   .header:not(.drawer-menu).page-width {
-    padding-left: 5rem;
-    padding-right: 5rem;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 
   .page-width--narrow {
@@ -240,7 +269,7 @@ body:has(.section-header .drawer-menu) .announcement-bar-section .page-width {
 
 .text-body {
   font-size: 1.5rem;
-  letter-spacing: 0.06rem;
+  letter-spacing: 0rem;
   line-height: calc(1 + 0.8 / var(--font-body-scale));
   font-family: var(--font-body-family);
   font-style: var(--font-body-style);
@@ -258,12 +287,14 @@ h5,
 .h3,
 .h4,
 .h5 {
-  font-family: var(--font-heading-family);
+  /* font-family: var(--font-heading-family); */
+font-family: "Abhaya Libre", serif;
   font-style: var(--font-heading-style);
   font-weight: var(--font-heading-weight);
   letter-spacing: calc(var(--font-heading-scale) * 0.06rem);
   color: rgb(var(--color-foreground));
-  line-height: calc(1 + 0.3 / max(1, var(--font-heading-scale)));
+  /*line-height: calc(1 + 0.3 / max(1, var(--font-heading-scale)));*/
+  line-height: 18.57px;
   word-break: break-word;
 }
 
@@ -861,7 +892,7 @@ summary::-webkit-details-marker {
 .subtitle {
   font-size: 1.8rem;
   line-height: calc(1 + 0.8 / var(--font-body-scale));
-  letter-spacing: 0.06rem;
+  letter-spacing: 0rem;
   color: rgba(var(--color-foreground), 0.7);
 }
 
@@ -2227,13 +2258,13 @@ input[type='checkbox'] {
   display: flex;
   width: 100%;
   text-decoration: none;
-  height: 100%;
+  height: auto;
   justify-content: center;
   align-items: center;
 }
 
 .announcement-bar__link:hover {
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 .announcement-bar__link .icon-arrow {
@@ -2246,10 +2277,11 @@ input[type='checkbox'] {
 
 .announcement-bar__message {
   text-align: center;
-  padding: 1rem 0;
+  padding: 0.5rem 0;
   margin: 0;
-  letter-spacing: 0.1rem;
-  min-height: 3.8rem;
+  letter-spacing: 0rem;
+  /* min-height: 3.8rem; */
+  opacity: 0.9;
 }
 
 .announcement-bar-slider--fade-in-next .announcement-bar__message,
@@ -2308,7 +2340,30 @@ input[type='checkbox'] {
     transform: translateX(var(--announcement-translate-to));
   }
 }
+.PromoBannerRules {
+    margin: 5px auto 15px;
+    width: 75%;
+    background-color: #fff;
+    border-radius: 5px;
+    display: none;
+    padding: 30px;
+    z-index: 9999;
+    clear: both;
+    opacity: 0.9;
+    color: #006400;
+}
+.SubTitle {
+    font-size: 13px;
+    line-height: 18.57px;
+}
+.PromoBannerRules ul li {
+    list-style-type: none;
+}
 
+.PromoBannerRules ul {
+    padding: 0 !important;
+    margin: 0 !important;
+}
 /* section-header */
 .section-header.shopify-section-group-header-group {
   z-index: 3;
