--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -241,9 +241,10 @@
         min-height: 100%;
         margin: 0;
         font-size: 1.5rem;
-        letter-spacing: 0.06rem;
+        letter-spacing: 0rem;
         line-height: calc(1 + 0.8 / var(--font-body-scale));
-        font-family: var(--font-body-family);
+        /* font-family: var(--font-body-family); */
+        font-family: "Abhaya Libre", serif;
         font-style: var(--font-body-style);
         font-weight: var(--font-body-weight);
       }
