--- a/assets/base.css
+++ b/assets/base.css
@@ -104,7 +104,36 @@
   font-weight: 800;
   font-style: normal;
 }
+@font-face {
+    font-family: 'Segoe UI Regular';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Segoe UI Regular'), url('Segoe UI.woff') format('woff');
+    }
+    
 
+    @font-face {
+    font-family: 'Segoe UI Italic';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Segoe UI Italic'), url('Segoe UI Italic.woff') format('woff');
+    }
+    
+
+    @font-face {
+    font-family: 'Segoe UI Bold';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Segoe UI Bold'), url('Segoe UI Bold.woff') format('woff');
+    }
+    
+
+    @font-face {
+    font-family: 'Segoe UI Bold Italic';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Segoe UI Bold Italic'), url('Segoe UI Bold Italic.woff') format('woff');
+    }
 .page-width {
   max-width: var(--page-width);
   margin: 0 auto;
@@ -131,7 +160,7 @@ body:has(.section-header .drawer-menu) .announcement-bar-section .page-width {
 
 @media screen and (min-width: 750px) {
   .page-width {
-    padding: 0 5rem;
+    padding: 0 15px;
   }
 
   .header.page-width,
@@ -407,7 +436,11 @@ blockquote {
 
 @media screen and (min-width: 750px) {
   .caption {
-    font-size: 1.2rem;
+    font-size: 13.3333px;
+        color: #999999;
+        letter-spacing: 0;
+        text-align: center !important;
+        margin: 0 auto;
   }
 }
 
@@ -448,14 +481,16 @@ table:not([class]) {
   border-collapse: collapse;
   font-size: 1.4rem;
   border-style: hidden;
-  box-shadow: 0 0 0 0.1rem rgba(var(--color-foreground), 0.2);
+  /* box-shadow: 0 0 0 0.1rem rgba(var(--color-foreground), 0.2); */
+  box-shadow: none;
+  width: 100%;
   /* draws the table border  */
 }
 
 table:not([class]) td,
 table:not([class]) th {
-  padding: 1em;
-  border: 0.1rem solid rgba(var(--color-foreground), 0.2);
+  padding: 0em;
+  border: 0rem solid rgba(var(--color-foreground), 0.2);
 }
 
 @media screen and (max-width: 749px) {
@@ -522,7 +557,7 @@ h6:empty {
   text-underline-offset: 0.3rem;
   color: rgb(var(--color-link));
   background-color: transparent;
-  font-size: 1.4rem;
+  font-size: 18px;
   font-family: inherit;
 }
 
@@ -685,11 +720,23 @@ summary {
   position: relative;
 }
 
+/* Original icon css
 summary .icon-caret {
   position: absolute;
   height: 0.6rem;
   right: 1.5rem;
   top: calc(50% - 0.2rem);
+} */
+
+summary .icon-caret {
+  position: relative;
+  height: 0.6rem;
+  right: 0 !important;
+  top: calc(50% - 0.2rem);
+}
+
+summary span{
+  margin-right: 2px;
 }
 
 summary::-webkit-details-marker {
@@ -922,6 +969,10 @@ summary::-webkit-details-marker {
     column-gap: var(--grid-desktop-horizontal-spacing);
     row-gap: var(--grid-desktop-vertical-spacing);
   }
+  .collection-list.grid {
+    column-gap: 30px;
+    row-gap: 30px;
+  }
 }
 
 .grid:last-child {
@@ -1035,9 +1086,19 @@ summary::-webkit-details-marker {
     max-width: calc(25% - var(--grid-desktop-horizontal-spacing) * 3 / 4);
   }
 
+  .grid--4-col-desktop.collection-list .grid__item {
+    width: calc(25% - 30px * 3 / 4);
+    max-width: calc(25% - 30px * 3 / 4);
+  }
+
   .grid--3-col-desktop .grid__item {
     width: calc(33.33% - var(--grid-desktop-horizontal-spacing) * 2 / 3);
     max-width: calc(33.33% - var(--grid-desktop-horizontal-spacing) * 2 / 3);
+  }
+
+   .grid--3-col-desktop.collection-list .grid__item {
+    width: calc(33.33% - 30px * 2 / 3);
+    max-width: calc(33.33% - 30px * 2 / 3);
   }
 
   .grid--2-col-desktop .grid__item {
@@ -1734,6 +1795,8 @@ details[open] > .share-button__fallback {
   width: 100%;
   display: flex;
   transition: box-shadow var(--duration-short) ease;
+  align-items: flex-end;
+  gap: 2.9px;
 }
 
 .customer .field {
@@ -2409,7 +2472,8 @@ input[type='checkbox'] {
   display: grid;
   grid-template-areas: 'left-icons heading icons';
   grid-template-columns: 1fr 2fr 1fr;
-  align-items: center;
+  align-items: start;
+  padding: 10px 15px !important;
 }
 
 @media screen and (max-width: 749px) {
@@ -2491,7 +2555,7 @@ input[type='checkbox'] {
 
 .header__heading-link {
   display: inline-block;
-  padding: 0.75rem;
+  padding: 0rem;
   text-decoration: none;
   word-break: break-word;
 }
@@ -2536,7 +2600,7 @@ input[type='checkbox'] {
 @media screen and (min-width: 990px) {
   .header--middle-left .header__heading-link,
   .header--top-left .header__heading-link {
-    margin-left: -0.75rem;
+    margin-left: 0rem;
   }
 
   .header__heading,
@@ -2576,6 +2640,7 @@ input[type='checkbox'] {
   display: flex;
   align-items: center;
   justify-content: center;
+  text-decoration: none;
 }
 
 .header__icon {
@@ -2588,7 +2653,7 @@ input[type='checkbox'] {
 
 .header__icon .svg-wrapper {
   width: 44px;
-  height: 44px;
+  height: 33px;
 }
 
 .header__icon::after {
@@ -2609,8 +2674,8 @@ input[type='checkbox'] {
 
 .header__icon,
 .header__icon--cart .icon {
-  height: 4.4rem;
-  width: 4.4rem;
+  height: fit-content;
+  width: 84px;
   padding: 0;
 }
 
@@ -2643,9 +2708,40 @@ details[open] .header__icon-close {
 }
 
 account-icon {
-  display: flex;
+  display: flex
+;
+    justify-content: center;
+    align-items: center;
+    vertical-align: middle;
+    flex-wrap: wrap;
 }
-
+account-icon span.account-tetxt-section {
+    font-size: 11px;
+    line-height: 16px;
+    flex: 0 0 100%;
+    max-width: 100%;
+  opacity: 0.789;
+}
+a#cart-icon-bubble {
+    display: flex
+;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    vertical-align: middle;
+}
+a#cart-icon-bubble span.cart-tetxt-section {
+    flex: 0 0 100%;
+    max-width: 100%;
+    font-size: 11px;
+    line-height: 16px;
+  opacity: 0.789;
+}
+.phone-section .phone-text-section {
+    font-size: 11px;
+    line-height: 16px;
+  opacity: 0.789;
+}
 /* Search */
 menu-drawer + .header__search {
   display: none;
@@ -2814,7 +2910,7 @@ details[open] > .header__submenu {
 
 /* Header menu */
 .header__inline-menu {
-  margin-left: -1.2rem;
+  margin-left: -2.2rem;
   grid-area: navigation;
   display: none;
 }
@@ -2847,9 +2943,9 @@ details[open] > .header__submenu {
 }
 
 .header__menu-item {
-  padding: 1.2rem;
+  padding: 10px 20px 0px;
   text-decoration: none;
-  color: rgba(var(--color-foreground), 0.75);
+  color: rgba(var(--color-foreground), 1);
 }
 
 .header__menu-item:hover {
@@ -2861,12 +2957,12 @@ details[open] > .header__submenu {
 }
 
 .header__menu-item:hover span {
-  text-decoration: underline;
+  text-decoration: none;
   text-underline-offset: 0.3rem;
 }
 
 details[open] > .header__menu-item {
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 details[open]:hover > .header__menu-item {
@@ -2880,7 +2976,7 @@ details[open] > .header__menu-item .icon-caret {
 .header__active-menu-item {
   transition: text-decoration-thickness var(--duration-short) ease;
   color: rgb(var(--color-foreground));
-  text-decoration: underline;
+  text-decoration: none;
   text-underline-offset: 0.3rem;
 }
 
@@ -2923,11 +3019,19 @@ details[open] > .header__menu-item .icon-caret {
 }
 
 .header__submenu .header__menu-item:hover {
-  text-decoration-line: underline;
+  text-decoration-line: none;
 }
 
 .header__menu-item .icon-caret {
   right: 0.8rem;
+  display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: 2px;
+    vertical-align: middle;
+    border-top: 4px dashed;
+    border-right: 4px solid transparent;
+    border-left: 4px solid transparent;
 }
 
 .header__submenu .icon-caret {
@@ -3638,7 +3742,22 @@ details-disclosure > details {
 .progress-bar .progress-bar-value {
   display: block;
 }
-
+.phone-section {
+    display: flex
+;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    vertical-align: middle;
+}
+.phone-section div img {
+    display: block;
+}
+.phone-section div:last-child {
+    flex: 0 0 100%;
+    max-width: 100%;
+    text-align: center;
+}
 @keyframes indeterminateAnimation {
   0% {
     transform: translateX(-20%) scaleX(0);
@@ -3649,4 +3768,455 @@ details-disclosure > details {
   100% {
     transform: translateX(100%) scaleX(0);
   }
+}
+.section-title {
+    border-bottom: 1px solid #aaa;
+    color: #343b41;
+    font-family: "Segoe UI";
+    font-size: 18px;
+    letter-spacing: 1px;
+    margin-bottom: 4px;
+    text-shadow: 0 1px 1px #eee;
+    text-transform: uppercase;
+}
+.category-title {
+	color: #343b41;
+	font-size: 16px;
+	margin-bottom: 2px;
+	margin-top: 8px;
+	text-shadow: 0 1px 1px #ddd;
+}
+
+.subcategory-title {
+	color: #343b41;
+	line-height: 20px;
+	margin-left: 8px;
+  font-size: 16px;
+}
+
+.subcategory-title:hover,
+.subcategory-title:active {
+    color: #aa0000;
+}
+.footer-block.footer-block--menu {
+    padding-right: 40px;
+    padding-bottom: 20px;
+    max-width: fit-content;
+}
+.category-title a, .subcategory-title a {
+    border: medium none;
+    color: #51575d;
+    font-family: "Abhaya Libre", "Segoe UI";
+    text-decoration: none;
+}
+.bottom-shadow {
+    box-shadow: 0 8px 8px -15px #333;
+}
+/* Slideshow Fadein section */
+@keyframes fade {
+    0% {
+        opacity: 0;
+    }
+
+    11.11% {
+        opacity: 1;
+    }
+
+    33.33% {
+        opacity: 1;
+    }
+
+    44.44% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
+
+.fadein {
+    position: relative;
+    height: 475px;
+    overflow: hidden;
+    margin-bottom: 10px;
+}
+
+/* For medium screens (tablet) */
+@media (max-width: 768px) {
+    .fadein {
+        height: 300px;
+    }
+}
+
+/* For small screens (mobile) */
+@media (max-width: 480px) {
+    .fadein {
+        height: 230px;
+    }
+}
+
+.fadein img {
+    object-position: top;
+    position: absolute;
+    opacity: 0;
+    animation-name: fade;
+    animation-duration: 15s;
+    animation-iteration-count: infinite;
+    width: 100%;
+    height: auto;
+}
+
+.fadein img:nth-child(1) {
+    animation-delay: 0s;
+}
+
+.fadein img:nth-child(2) {
+    animation-delay: 5s;
+}
+
+.fadein img:nth-child(3) {
+    animation-delay: 10s;
+}
+
+.fadein img:nth-child(4) {
+    animation-delay: 15s;
+}
+
+.fadein img:nth-child(5) {
+    animation-delay: 20s;
+}
+.slideshow-fadein-content-section .slideshow-fadein-info-section p {
+    color: #333333;
+    line-height: 22.86px;
+    font-size: 16px;
+}
+.slideshow-fadein-logo-section {
+    text-align: right;
+    margin-top: -28px;
+}
+/* Slideshow Fadein section */
+.card__content {
+    position: absolute;
+    left: 0;
+    top: 0px;
+    background-image: linear-gradient(#333, transparent);
+    padding-left: 10px !important;
+  padding-right: 10px !important;
+}
+h4.card__sub_heading {
+    color: #666;
+    background-color: #ffffff;
+    width: fit-content;
+    padding: 5px;
+    font-size: 16px;
+    line-height: 21px;
+    font-family: 'Abhaya Libre';
+    display: flex
+;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    vertical-align: middle;
+    margin: 0px 0px;
+      word-break: keep-all;
+}
+h3.card__heading {
+        color: #fff;
+    padding: 0 0 8px;
+    font-size: 17px;
+    line-height: 22px;
+}
+.collection-list-wrapper.page-width {
+    padding: 0px;
+}
+.collection-list-new h4.card__sub_heading {
+    display: none;
+}
+.rich-text__wrapper.rich-text__wrapper--left.page-width {
+    padding-left: 0px;
+    padding-right: 0px;
+}
+h2.rich-text__heading.h2 {
+    padding: 20px 0px 10px;
+    font-size: 20px;
+    line-height: 25px;
+}
+.rich-text__text {
+    margin: 0 !important;
+    font-size: 16px;
+    line-height: 22.86px;
+    color: #333333;
+}
+.collection-list-wrapper .title-wrapper-with-link {
+    margin: 20px 0px 10px !important;
+    font-size: 20px !important;
+    line-height: 25px !important;
+    color: #777777;
+}
+.image-list-main-section .image-list-inner-section .image-list-head-section .image-list-title {
+    font-size: 20px;
+    line-height: 25px;
+    color: #777777;
+      padding: 20px 0px 10px;
+}
+.image-list-main-section .image-list-inner-section .image-list-head-section .image-list-content p a {
+    color: #337ab7;
+    text-decoration: none;
+}
+
+.image-list-main-section .image-list-inner-section .image-list-head-section .image-list-content p {
+    font-size: 16px;
+    line-height: 22.86px;
+    margin: 0px 0px 10px;
+    color: #333333;
+}
+.image-list-items-section .image-list-item-section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    vertical-align: middle;
+    gap: 30px;
+}
+.image-list-items-section .image-list-item-section .image-list-img {
+    flex: 0 0 calc(33.33% - 20px);
+    max-width: calc(33.33% - 20px);
+}
+.image-list-items-section .image-list-item-section .image-list-img img {
+    max-width: 100%;
+    height: auto;
+}
+.logo-list-items-section .logo-list-item-section {
+    text-align: center;
+    margin-top: 18px;
+}
+.logo-list-items-section .logo-list-item-section .logo-list-img img {
+    max-width: 100%;
+    height: auto;
+}
+.we-accept-main-section {
+    padding: 15px;
+    text-align: center;
+}
+form.search.search-modal__form button {
+    font-size: 14px;
+    line-height: 19px;
+    color: #ffffff;
+    padding: 0px 5px;
+    background: #bbbbbb !important;
+    font-family: 'Segoe UI Regular';
+}
+input[type="search"] {
+    border: medium none;
+    box-shadow: 0 0 3px #999;
+    font-family: "Segoe UI";
+    font-size: 15px;
+    height: 32px;
+    padding: 0 10px;
+}
+.search-modal__form .field .search__button{
+  position: inherit;
+  height: 3.4rem;
+  width: 6.2rem;
+}
+.search-modal__form .field:after{
+  box-shadow: none;
+}
+.search-modal__form .field:hover:after{
+  box-shadow: none;
+}
+.search-modal__form .field input[type=search]:focus-visible{
+  box-shadow: none;
+  outline: .2rem solid black;
+  outline-offset: 0rem;
+  border-radius: 3px;
+}
+.header .header__icons .header-menu-icons{
+  display: flex;
+}
+@media only screen and (max-width: 990px) {
+  .page-width.side-bar-with-content-section .side-bar-section{
+    display: none;
+  }
+  .page-width.side-bar-with-content-section .content-section{
+    flex: 0 0 calc(100% - 15px);
+    max-width: 100%;
+  }
+  .we-accept-main-section .spacing{
+    display: none;
+  }
+  .header header-drawer{
+    display: none;
+  }
+  .header .header__icons{
+    flex-direction: column-reverse;
+  }
+  .header-wrapper .header{
+    grid-template-columns: 0fr 1fr;
+  }
+  .header .header__icons .header-menu-icons{
+    display: flex;
+  }
+  .header .header__icons .header-menu-icons a{
+    display: flex !important;
+    padding-bottom: 10px;
+  }
+}
+@media only screen and (max-width: 990px) {
+  .collection-list .collection-list__item{
+    width: 30%;
+    max-width: 30%;
+  }
+  .collection-list .collection-list__item .card-wrapper
+  .card .card__content .card__information h4{
+    line-height: 8px;
+    font-size: 10px;
+  }
+  .collection-list .collection-list__item .card-wrapper
+  .card .card__content .card__information h3 a{
+    font-size: 10px;
+    line-height: 10px;
+  }
+}
+@media only screen and (min-width: 990px) {
+  .header-search-main-section {
+    padding: 10px 15px 0px 0px;
+  }
+  .hamburger-menu-icon{
+    display: none;
+  }
+  .hamburger-menu-icon .fa-solid{
+    padding: 9px 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+  }
+  .hamburger-menu-icon .fa-solid:focus{
+    background-color: #ddd;
+  }
+}
+@media only screen and (min-width: 991px) {
+ .page-width.side-bar-with-content-section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    vertical-align: middle;
+    gap: 30px;
+  }
+  .page-width.side-bar-with-content-section .side-bar-section {
+      flex: 0 0 calc(25.615% - 15px);
+      max-width: calc(25.615% - 15px);
+  }
+  .page-width.side-bar-with-content-section .content-section {
+      flex: 0 0 calc(74.385% - 15px);
+      max-width: calc(74.385% - 15px);
+  }
+}
+.hamburger-menu-icon .mobile-menu{
+  display: none;
+  position: absolute;
+  z-index: 2;
+  margin-left: -15px;
+}
+.hamburger-menu-icon .mobile-menu table tbody 
+tr td .bottom-shadow .hamburger-menu{
+  display: none;
+  height: auto;
+  overflow: auto;
+  background: #d8d5d5;
+  padding: 0 25px;
+  max-height: 300px;
+}
+.menu-plus-icon{
+  background-color: #787878;
+  color: #fff;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  vertical-align: middle;
+}
+.hamburger-menu-icon .mobile-menu table tbody 
+tr td .bottom-shadow .section-title{
+  border: 0;
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  padding: 0px 40px;
+  text-shadow: none;
+}
+.menu-plus-icon {
+    display: block !important;
+    width: 18px;
+    height: 18px;
+    position: absolute;
+    left: 10px;
+    top: 50%;
+    margin-top: -9px;
+    background: url(https://cdn.shopify.com/s/files/1/0641/0466/1162/files/plusminus.png?v=1741096035) center 0;
+    z-index: 9999999999;
+}
+.active{
+  display: block !important;
+}
+.show{
+  display: block !important;
+}
+.header__icon {
+    color: #444444;
+    opacity: 1;
+}
+.collection-list-new .collection-list-title {
+    font-size: 20px;
+}
+  h2.rich-text__heading.rte.inline-richtext.h2.scroll-trigger.animate--slide-in {
+    text-transform: uppercase;
+}
+  .title-wrapper-with-link.title-wrapper--self-padded-mobile.title-wrapper--no-top-margin {
+    padding: 0;
+    text-transform: uppercase;
+}
+  .image-list-main-section .image-list-inner-section .image-list-head-section .image-list-title {
+    text-transform: uppercase;
+}
+@media (max-width: 989px) {
+.section-title {
+    position: relative;
+}
+  .hamburger-menu-icon {
+    margin-bottom: 15px;
+}
+.slideshow-fadein-logo-section {
+    margin-top: 0px;
+}
+  .rich-text__wrapper.rich-text__wrapper--left.page-width {
+    margin: 0;
+    width: 100%;
+}
+
+  .collection-list-new .collection-list .collection-list__item {
+        width: calc(25% - 4px) !important;
+        max-width: calc(25% - 4px) !important;
+    }
+ .mobile-menu table {
+    border: 1px solid #aaa;
+}
+.mobile-menu table tr {
+    border: 1px solid #aaa;
+} 
+}
+@media (max-width: 767px) {
+.header__heading-logo {
+    max-width: 76.66px;
+}
+.header__icon, .header__icon--cart .icon {
+    width: 75px;
+}
+input[type=search] {
+    width: 70%;
+}
 }
