--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -297,8 +297,9 @@
         document.documentElement.classList.add('shopify-design-mode');
       }
     </script>
-	<link href="https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
   </head>
 
   <body class="gradient{% if settings.animations_hover_elements != 'none' %} animate--hover-{{ settings.animations_hover_elements }}{% endif %}">
@@ -313,7 +314,18 @@
     {% sections 'header-group' %}
 
     <main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
-      {{ content_for_layout }}
+      <div class="page-width side-bar-with-content-section" >
+        <div class="side-bar-section" >
+          {% render 'collection-side-bar' %}
+        </div>
+        <div class="hamburger-menu-icon">
+          <i class="fa-solid fa-bars" style="padding: 9px 10px;border: 1px solid #ddd;border-radius: 4px;"></i>
+          {% render 'collection-side-bar-mobile' %}
+        </div>
+        <div class="content-section" >
+          {{ content_for_layout }}
+        </div>
+      </div>
     </main>
 
     {% sections 'footer-group' %}
@@ -366,6 +378,26 @@
         recipientFormCollapsed: `{{ 'recipient.form.collapsed' | t }}`,
         countrySelectorSearchCount: `{{ 'localization.country_results_count' | t: count: '[count]' }}`,
       };
+    </script>
+    <script src="https://kit.fontawesome.com/33b151e3ed.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script>
+      $(document).ready(function(){
+        $(".fa-solid").on("click", function(){
+          // $(".mobile-menu").toggleClass("active");
+          $(".mobile-menu").slideToggle('fast');
+        });
+        $(".menu-plus-icon").on("click", function(){
+          $(this).closest(".section-title").next(".hamburger-menu").slideToggle('fast');
+          // if($(this).closest(".section-title").next(".hamburger-menu").hasClass("show")){
+          //   $(this).closest(".section-title").next(".hamburger-menu").toggleClass("show");
+          // }
+          // else{
+          //   $(".menu-plus-icon").closest(".section-title").next(".hamburger-menu").removeClass("show");
+          //   $(this).closest(".section-title").next(".hamburger-menu").addClass("show");
+          // }
+        });
+      });
     </script>
 
     {%- if settings.predictive_search_enabled -%}
