--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -54,7 +54,9 @@
   .list-menu__item {
     display: flex;
     align-items: center;
-    line-height: calc(1 + 0.3 / var(--font-body-scale));
+    /* line-height: calc(1 + 0.3 / var(--font-body-scale)); */
+    line-height: 20px;
+    text-transform: uppercase;
   }
 
   .list-menu__item--link {
@@ -224,60 +226,81 @@
           </localization-form>
         {%- endif -%}
       </div>
-      {% render 'header-search', input_id: 'Search-In-Modal' %}
-
-      {%- if shop.customer_accounts_enabled -%}
-        <a
-          href="{%- if customer -%}{{ routes.account_url }}{%- else -%}{{ routes.account_login_url }}{%- endif -%}"
-          class="header__icon header__icon--account link focus-inset{% if section.settings.menu != blank %} small-hide{% endif %}"
-          rel="nofollow"
-        >
-          {%- if section.settings.enable_customer_avatar -%}
-            <account-icon>
-              {%- if customer and customer.has_avatar? -%}
-                {{ customer | avatar }}
-              {%- else -%}
-                <span class="svg-wrapper">{{ 'icon-account.svg' | inline_asset_content }}</span>
-              {%- endif -%}
-            </account-icon>
-          {%- else -%}
-            <span class="svg-wrapper">{{ 'icon-account.svg' | inline_asset_content }}</span>
-          {%- endif -%}
-          <span class="visually-hidden">
-            {%- liquid
-              if customer
-                echo 'customer.account_fallback' | t
-              else
-                echo 'customer.log_in' | t
-              endif
-            -%}
-          </span>
+      {% comment %}{% render 'header-search', input_id: 'Search-In-Modal' %}{% endcomment %}
+      <div class="header-search-main-section" >
+        <div class="header-search-inner-section" >
+            <form action="/search" method="get" role="search" class="search search-modal__form">
+          <div class="field">
+            <input type="search" name="q" value="" placeholder="keyword or pattern #">
+            <input type="hidden" name="options[prefix]" value="last">
+            <button class="search__button field__button" aria-label="Search">
+              <span class="svg-wrapper">SEARCH</span>
+            </button>
+          </div></form>
+        </div>
+      </div>
+      <div class="header-menu-icons">
+        <a href="tel:(305) 470-8912" class="phone-section header__icon header__icon--account link focus-inset{% if section.settings.menu != blank %} small-hide{% endif %}" onclick="location.href='tel:(305) 470-8912'" >
+          <div class="svg-wrapper"><img src="{{ 'phone.png' | asset_img_url }}" alt="Phone" width="30" height="30" ></div>
+          <div class="phone-text-section" >(305) 470-8912</div>
         </a>
-      {%- endif -%}
-
-      {%- for block in section.blocks -%}
-        {%- case block.type -%}
-          {%- when '@app' -%}
-            {% render block %}
-        {%- endcase -%}
-      {%- endfor -%}
-
-      <a href="{{ routes.cart_url }}" class="header__icon header__icon--cart link focus-inset" id="cart-icon-bubble">
-          {% if cart == empty %}
-            <span class="svg-wrapper">{{'icon-cart-empty.svg' | inline_asset_content }}</span>
-          {% else %}
-            <span class="svg-wrapper">{{'icon-cart.svg' | inline_asset_content }}</span>
-          {% endif %}
-        <span class="visually-hidden">{{ 'templates.cart.cart' | t }}</span>
-        {%- if cart != empty -%}
-          <div class="cart-count-bubble">
-            {%- if cart.item_count < 100 -%}
-              <span aria-hidden="true">{{ cart.item_count }}</span>
+        {%- if shop.customer_accounts_enabled -%}
+          <a
+            href="{%- if customer -%}{{ routes.account_url }}{%- else -%}{{ routes.account_login_url }}{%- endif -%}"
+            class="header__icon header__icon--account link focus-inset{% if section.settings.menu != blank %} small-hide{% endif %}"
+            rel="nofollow"
+          >
+            {%- if section.settings.enable_customer_avatar -%}
+              <account-icon>
+                {%- if customer and customer.has_avatar? -%}
+                  {{ customer | avatar }}
+                {%- else -%}
+                  <span class="svg-wrapper"><img src="{{ 'account.png' | asset_img_url }}" alt="Account" width="30" height="30" ></span>
+                  <span class="account-tetxt-section" >MY ACCOUNT</span>
+                {%- endif -%}
+              </account-icon>
+            {%- else -%}
+              <span class="svg-wrapper"><img src="{{ 'account.png' | asset_img_url }}" alt="Account" width="30" height="30" ></span>
+              <span class="account-tetxt-section" >MY ACCOUNT</span>
             {%- endif -%}
-            <span class="visually-hidden">{{ 'sections.header.cart_count' | t: count: cart.item_count }}</span>
-          </div>
+            <span class="visually-hidden">
+              {%- liquid
+                if customer
+                  echo 'customer.account_fallback' | t
+                else
+                  echo 'customer.log_in' | t
+                endif
+              -%}
+            </span>
+          </a>
         {%- endif -%}
-      </a>
+  
+        {%- for block in section.blocks -%}
+          {%- case block.type -%}
+            {%- when '@app' -%}
+              {% render block %}
+          {%- endcase -%}
+        {%- endfor -%}
+  
+        <a href="{{ routes.cart_url }}" class="header__icon header__icon--cart link focus-inset" id="cart-icon-bubble">
+            {% if cart == empty %}
+              <span class="svg-wrapper"><img src="{{ 'shopping-bag.png' | asset_img_url }}" alt="Cart" width="30" height="30" ></span>
+              <span class="cart-tetxt-section">SHOPPING BAG</span>
+            {% else %}
+              <span class="svg-wrapper"><img src="{{ 'shopping-bag.png' | asset_img_url }}" alt="Cart" width="30" height="30" ></span>
+              <span class="cart-tetxt-section">SHOPPING BAG</span>
+            {% endif %}
+          <span class="visually-hidden">{{ 'templates.cart.cart' | t }}</span>
+          {%- if cart != empty -%}
+            <div class="cart-count-bubble">
+              {%- if cart.item_count < 100 -%}
+                <span aria-hidden="true">{{ cart.item_count }}</span>
+              {%- endif -%}
+              <span class="visually-hidden">{{ 'sections.header.cart_count' | t: count: cart.item_count }}</span>
+            </div>
+          {%- endif -%}
+        </a>
+      </div>
     </div>
   </header>
 </{% if section.settings.sticky_header_type != 'none' %}sticky-header{% else %}div{% endif %}>
