--- a/snippets/card-collection.liquid
+++ b/snippets/card-collection.liquid
@@ -133,13 +133,14 @@
               {%- else -%}
                 {{ 'onboarding.collection_title' | t }}
               {%- endif -%}
-              {%- if card_collection.featured_image or card_collection.description == blank -%}
+             {% comment %} {%- if card_collection.featured_image or card_collection.description == blank -%}
                 <span class="icon-wrap">
                   {{- 'icon-arrow.svg' | inline_asset_content -}}
                 </span>
-              {%- endif %}
+              {%- endif %}{% endcomment %}
             </a>
           </h3>
+          <h4 class="card__sub_heading" >CUSTOMIZE</h4>
           {%- if card_collection.featured_image == null and card_collection.description != blank -%}
             <p class="card__caption">
               {{- card_collection.description | strip_html | truncatewords: 12 -}}
