--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -299,23 +299,11 @@
     </div>
     <div class="footer__content-bottom-wrapper page-width{% if section.settings.enable_country_selector == false and section.settings.enable_language_selector == false %} footer__content-bottom-wrapper--center{% endif %}">
       <div class="footer__copyright caption">
-        <small class="copyright__content"
-          >&copy; {{ 'now' | date: '%Y' }}, {{ shop.name | link_to: routes.root_url -}}
-        </small>
-        <small class="copyright__content">{{ powered_by_link }}</small>
-        {%- if section.settings.show_policy -%}
-          <ul class="policies list-unstyled">
-            {%- for policy in shop.policies -%}
-              {%- if policy != blank -%}
-                <li>
-                  <small class="copyright__content"
-                    ><a href="{{ policy.url }}">{{ policy.title | escape }}</a></small
-                  >
-                </li>
-              {%- endif -%}
-            {%- endfor -%}
-          </ul>
-        {%- endif -%}
+        <small class="copyright__content">
+        Copyright &copy; {{ 'now' | date: '%Y' }}, {{ 'OutdoorFabrics.com' | link_to: routes.root_url -}}</small>
+        <small class="copyright__content">Any rights not expressly granted herein are reserved.</small>
+        <small class="copyright__content">Sunbrella®, Comfort Sling®, Firesist®, and Glen Raven® are registered Trademarks of Glen Raven, Inc. Smith & Hawken® is a registered trademark of Target Brands, Inc.</small>
+        <small class="copyright__content">Permission has been granted by Waverly® to display copyrighted designs. All rights reserved.</small>
       </div>
     </div>
   </div>
